Add uberjar build